--- a/src/GIMI-ModManager.WinUI/Views/ShellPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/ShellPage.xaml
@@ -83,6 +83,13 @@
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
 
+
+                <NavigationViewItem helpers:NavigationHelper.NavigateTo="GIMI_ModManager.WinUI.ViewModels.PresetViewModel" Content="Mod Presets">
+                    <NavigationViewItem.Icon>
+                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xEA41;" />
+                    </NavigationViewItem.Icon>
+                </NavigationViewItem>
+
                 <NavigationViewItem
                     x:Name="DebugItem"
                     helpers:NavigationHelper.NavigateTo="GIMI_ModManager.WinUI.ViewModels.DebugViewModel"
