--- a/src/GIMI-ModManager.WinUI/Views/PresetPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/PresetPage.xaml
@@ -3,6 +3,7 @@
     x:Class="GIMI_ModManager.WinUI.Views.PresetPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="using:GIMI_ModManager.WinUI.Views.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:GIMI_ModManager.WinUI.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -22,10 +23,10 @@
                 <ColumnDefinition />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <StackPanel Orientation="Horizontal">
-                <Button Content="Save active mod preferences (KeySwaps)" IsEnabled="False" />
-                <Button Content="Apply saved mod preferences (KeySwaps" IsEnabled="False" />
-                <Button Content="Randomize Mods" IsEnabled="False" />
+            <StackPanel Orientation="Horizontal" Spacing="16">
+                <Button Command="{x:Bind ViewModel.SaveActivePreferencesCommand}" Content="Save active mod preferences (KeySwaps)" />
+                <Button Command="{x:Bind ViewModel.ApplyPresetCommand}" Content="Apply saved mod preferences (KeySwaps)" />
+                <Button Command="{x:Bind ViewModel.RandomizeModsCommand}" Content="Randomize Mods" />
                 <Button Content="3Dmigoto reload config" IsEnabled="False" />
             </StackPanel>
             <ProgressRing Grid.Column="1" IsActive="{x:Bind ViewModel.IsBusy, Mode=OneWay}" />
@@ -42,17 +43,30 @@
                 <RowDefinition />
             </Grid.RowDefinitions>
             <StackPanel>
-                <TextBox Header="Preset Name" Text="{x:Bind ViewModel.NewPresetNameInput, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <StackPanel Orientation="Horizontal">
+                <TextBox
+                    Header="Preset Name"
+                    IsEnabled="{x:Bind ViewModel.IsNotBusy, Mode=OneWay}"
+                    Text="{x:Bind ViewModel.NewPresetNameInput, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <StackPanel
+                    Margin="0,8"
+                    Orientation="Horizontal"
+                    Spacing="8">
                     <Button Command="{x:Bind ViewModel.CreatePresetCommand}" Content="Save as new preset" />
-                    <CheckBox Content="Create as an empty preset" IsChecked="{x:Bind ViewModel.CreateEmptyPresetInput, Mode=TwoWay}" />
+                    <CheckBox
+                        Content="Create as an empty preset"
+                        IsChecked="{x:Bind ViewModel.CreateEmptyPresetInput, Mode=TwoWay}"
+                        IsEnabled="{x:Bind ViewModel.IsNotBusy, Mode=OneWay}" />
                 </StackPanel>
             </StackPanel>
 
             <ListView
+                x:Name="PresetsList"
                 Grid.Row="1"
+                Padding="0,16"
                 AllowDrop="True"
+                CanDragItems="True"
                 CanReorderItems="True"
+                IsEnabled="{x:Bind ViewModel.IsNotBusy, Mode=OneWay}"
                 ItemsSource="{x:Bind ViewModel.Presets}"
                 SelectionMode="None">
                 <ListView.ItemTemplate>
@@ -64,49 +78,81 @@
                             BorderThickness="4"
                             CornerRadius="12">
                             <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
                                 <ColumnDefinition />
                                 <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
 
                             <StackPanel>
-                                <TextBlock IsTextSelectionEnabled="True" Text="{x:Bind Name}" />
-                                <Button
-                                    Command="{x:Bind ApplyPresetCommand}"
-                                    CommandParameter="{Binding}"
-                                    Content="Apply Preset" />
 
+                                <StackPanel Orientation="Horizontal">
+                                    <controls:EditableTextBlock
+                                        MinWidth="200"
+                                        IsEditMode="{x:Bind IsEditingName, Mode=OneWay}"
+                                        KeyDown="UIElement_OnKeyDown"
+                                        Text="{x:Bind NameInput, Mode=TwoWay}" />
+                                </StackPanel>
+
+
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="Preset Mod Count:" />
+                                    <TextBlock Margin="4,0" Text="{x:Bind EnabledModsCount, Mode=OneWay}" />
+                                </StackPanel>
                             </StackPanel>
 
-                            <DropDownButton Grid.Column="1" AutomationProperties.Name="Email">
-                                <DropDownButton.Content>
-                                    <FontIcon Glyph="&#xE712;" />
-                                </DropDownButton.Content>
-                                <DropDownButton.Flyout>
-                                    <MenuFlyout Placement="Bottom">
-                                        <MenuFlyoutItem Text="Rename">
-                                            <MenuFlyoutItem.Icon>
-                                                <FontIcon Glyph="&#xE8AC;" />
-                                            </MenuFlyoutItem.Icon>
-                                        </MenuFlyoutItem>
-                                        <MenuFlyoutItem
-                                            Command="{x:Bind DuplicatePresetCommand}"
-                                            CommandParameter="{Binding}"
-                                            Text="Duplicate">
-                                            <MenuFlyoutItem.Icon>
-                                                <FontIcon Glyph="&#xEA35;" />
-                                            </MenuFlyoutItem.Icon>
-                                        </MenuFlyoutItem>
-                                        <MenuFlyoutItem
-                                            Command="{x:Bind DeletePresetCommand}"
-                                            CommandParameter="{Binding}"
-                                            Text="Delete">
-                                            <MenuFlyoutItem.Icon>
-                                                <FontIcon Glyph="&#xE74D;" />
-                                            </MenuFlyoutItem.Icon>
-                                        </MenuFlyoutItem>
-                                    </MenuFlyout>
-                                </DropDownButton.Flyout>
-                            </DropDownButton>
+                            <StackPanel
+                                Grid.Column="2"
+                                Orientation="Horizontal"
+                                Spacing="16">
+                                <Button Content="Apply Preset">
+                                    <Button.Flyout>
+                                        <Flyout Placement="Left">
+                                            <StackPanel>
+                                                <Button
+                                                    Command="{x:Bind ApplyPresetCommand}"
+                                                    CommandParameter="{Binding}"
+                                                    Content="Confirm" />
+                                            </StackPanel>
+                                        </Flyout>
+                                    </Button.Flyout>
+
+
+                                </Button>
+                                <DropDownButton AutomationProperties.Name="Options">
+                                    <DropDownButton.Content>
+                                        <FontIcon Glyph="&#xE712;" />
+                                    </DropDownButton.Content>
+                                    <DropDownButton.Flyout>
+                                        <MenuFlyout Placement="Bottom">
+                                            <MenuFlyoutItem
+                                                Command="{x:Bind StartEditingNameCommand}"
+                                                CommandParameter="{Binding}"
+                                                Text="{x:Bind RenameButtonText, Mode=OneWay}">
+                                                <MenuFlyoutItem.Icon>
+                                                    <FontIcon Glyph="&#xE8AC;" />
+                                                </MenuFlyoutItem.Icon>
+                                            </MenuFlyoutItem>
+                                            <MenuFlyoutItem
+                                                Command="{x:Bind DuplicatePresetCommand}"
+                                                CommandParameter="{Binding}"
+                                                Text="Duplicate">
+                                                <MenuFlyoutItem.Icon>
+                                                    <FontIcon Glyph="&#xEA35;" />
+                                                </MenuFlyoutItem.Icon>
+                                            </MenuFlyoutItem>
+                                            <MenuFlyoutItem
+                                                Command="{x:Bind DeletePresetCommand}"
+                                                CommandParameter="{Binding}"
+                                                Text="Delete">
+                                                <MenuFlyoutItem.Icon>
+                                                    <FontIcon Glyph="&#xE74D;" />
+                                                </MenuFlyoutItem.Icon>
+                                            </MenuFlyoutItem>
+                                        </MenuFlyout>
+                                    </DropDownButton.Flyout>
+                                </DropDownButton>
+                            </StackPanel>
+
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
